--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <meta name="author" content="">
   <title>Freelancer - Start Bootstrap Theme</title>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
-    crossorigin="anonymous"></script>
+
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet">
   <!-- Fonts CSS   -->
@@ -19,6 +18,7 @@
 
 <body id="page-top">
 
+
   <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
     <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Gary The Barber</a>
       <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button"
@@ -26,14 +26,9 @@
         aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
+
           <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-              href="#portfolio">PORTFOLIO</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-              href="#about">ABOUT</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-              href="#contact">CONTACT</a>
+              href="http://booksy.com/en-us/dl/show-business/21043">Make Appointment</a>
           </li>
         </ul>
       </div>
@@ -42,7 +37,7 @@
   <header class="masthead bg-primary text-white text-center">
     <div class="container d-flex align-items-center flex-column">
 
-      <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets\img\avataaars.svg" alt="">
+      <!-- Masthead Avatar Image--><img id="mastHeadMain" class="masthead-avatar mb-5" src="" alt="">
       <!-- Masthead Heading-->
       <h1 class="masthead-heading mb-0">Gary The Barber</h1>
       <!-- Icon Divider-->
@@ -426,7 +421,7 @@
   <script src="js/scripts.js"></script>
 
 
-  <div id="app"></div>
+
 </body>
 
 </html>
