--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,12 @@
       <input type="checkbox" checked id="checkBoxThatOpensCurtains">
 
       <div class="curtain__panel curtain__panel--left">
-        <h1>Click to reveal&nbsp;</h1>
       </div> <!-- curtain__panel -->
 
       <div class="curtain__content">
         <div id="insideCurtain" class="slideSource">
 
-          <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+          <nav class="navbar navbar-expand-lg bg-secondary fixed-top hide" id="mainNav">
             <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">Gary The Barber</a>
               <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-brown rounded"
                 type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
@@ -49,9 +48,10 @@
 
               <!-- Masthead Avatar Image--><img id="mastHeadMain" class="masthead-avatar mb-5" src="" alt="">
               <!-- Masthead Heading-->
+              <!--changin mb-0 to not important, taking ! off-->
               <h1 class="masthead-heading mb-0">Gary The Barber</h1>
               <!-- Icon Divider-->
-              <div class="divider-custom divider-light">
+              <div class="divider-custom divider-light hide">
                 <div class="divider-custom-line"></div>
                 <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                 <div class="divider-custom-line"></div>
@@ -61,7 +61,7 @@
               </p>
             </div>
           </header>
-          <section class="page-section portfolio" id="portfolio">
+          <section class="page-section portfolio hide" id="portfolio">
             <div class="container">
               <!-- Portfolio Section Heading-->
               <div class="text-center">
@@ -436,7 +436,6 @@
       </div>
 
       <div class="curtain__panel curtain__panel--right">
-        <h1>a special reward...</h1>
       </div> <!-- curtain__panel -->
 
     </div> <!-- curtain__wrapper -->
